-- global alert message

--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,109 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+dist/3rdpartylicenses.txt
+dist/prerendered-routes.json
+dist/browser/index.csr.html
+dist/browser/index.html
+dist/browser/main-MGTP2KQX.js
+dist/browser/main-ZYNYJ4XJ.js
+dist/browser/polyfills-FFHMD2TL.js
+dist/browser/scripts-POO67ESJ.js
+dist/browser/styles-LZ4REZGO.css
+dist/browser/admin/categories/index.html
+dist/browser/admin/categories/add/index.html
+dist/browser/forgot-password/index.html
+dist/browser/login/index.html
+dist/browser/register/index.html
+dist/server/chunk-4X3E4OHN.mjs
+dist/server/chunk-5XUXGTUW.mjs
+dist/server/chunk-AMOCREKA.mjs
+dist/server/chunk-IZ4XLWMC.mjs
+dist/server/chunk-VCVCHJZV.mjs
+dist/server/chunk-Z6S7BSZU.mjs
+dist/server/index.server.html
+dist/server/main.server.mjs
+dist/server/polyfills.server.mjs
+dist/server/render-utils.server.mjs
+dist/server/server.mjs
+dist/3rdpartylicenses.txt
+dist/prerendered-routes.json
+dist/browser/index.csr.html
+dist/browser/index.html
+dist/browser/main-ZYNYJ4XJ.js
+dist/browser/polyfills-FFHMD2TL.js
+dist/browser/scripts-POO67ESJ.js
+dist/browser/styles-LZ4REZGO.css
+dist/browser/admin/categories/index.html
+dist/browser/admin/categories/add/index.html
+dist/server/chunk-5XUXGTUW.mjs
+dist/server/chunk-AMOCREKA.mjs
+dist/server/chunk-VCVCHJZV.mjs
+dist/server/chunk-Z6S7BSZU.mjs
+dist/server/index.server.html
+dist/server/main.server.mjs
+dist/server/polyfills.server.mjs
+dist/server/render-utils.server.mjs
+dist/server/server.mjs
+.angular/cache/18.2.14/AngularCore/.tsbuildinfo
+.angular/cache/18.2.14/AngularCore/angular-compiler.db
+.angular/cache/18.2.14/AngularCore/vite/deps/_metadata.json
+.angular/cache/18.2.14/AngularCore/vite/deps/@angular_common_http.js
+.angular/cache/18.2.14/AngularCore/vite/deps/@angular_common.js
+.angular/cache/18.2.14/AngularCore/vite/deps/@angular_core.js
+.angular/cache/18.2.14/AngularCore/vite/deps/@angular_forms.js
+.angular/cache/18.2.14/AngularCore/vite/deps/@angular_forms.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps/@angular_platform-browser.js
+.angular/cache/18.2.14/AngularCore/vite/deps/@angular_router.js
+.angular/cache/18.2.14/AngularCore/vite/deps/@angular_router.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-5VSWPKTS.js
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-5VSWPKTS.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-ASC55ZV5.js
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-ASC55ZV5.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-BEBUIBHJ.js
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-BEBUIBHJ.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-CL76LTQE.js
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-CL76LTQE.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-COHF7EIT.js
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-COHF7EIT.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-LZZO2QZE.js
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-LZZO2QZE.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-RKSTVNOZ.js
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-RKSTVNOZ.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-WNJJXUSS.js
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-WNJJXUSS.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-WVJHYPLX.js
+.angular/cache/18.2.14/AngularCore/vite/deps/chunk-WVJHYPLX.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps/rxjs.js
+.angular/cache/18.2.14/AngularCore/vite/deps/rxjs.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/_metadata.json
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/@angular_common_http.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/@angular_common.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/@angular_core.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/@angular_forms.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/@angular_forms.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/@angular_platform-browser.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/@angular_platform-server.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/@angular_platform-server.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/@angular_router.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/@angular_router.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-2H3L6IVL.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-2H3L6IVL.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-BU3ITAXS.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-BU3ITAXS.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-DCLCID2E.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-DCLCID2E.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-JCCOAL4H.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-JCCOAL4H.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-KJ2KHSRO.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-KJ2KHSRO.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-OK3LXHLX.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-OK3LXHLX.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-OZKOLQ6C.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-OZKOLQ6C.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-TVV2ZE3L.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-TVV2ZE3L.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-W6PCKXXP.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/chunk-W6PCKXXP.js.map
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/rxjs.js
+.angular/cache/18.2.14/AngularCore/vite/deps_ssr/rxjs.js.map
